--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,8 @@
     -->
   </body>
   <footer class="footer">
-    <p>&copy; 2023 MyCompany. All rights reserved.</p>
+    <p>&copy; 2023 CalleBach. All rights reserved.</p>
     <p>Website designed by <a href="https://github.com/RasmusThn">Rasmus</a></p>
+    <p>Email:  Rasmus795@gmail.com</p>
   </footer>
 </html>
